force-app/main/default/objects/Translation__c/Translation__c.object-meta.xml
<CustomObject>
    <description>This Object will store all the translation for different  values in Apttus</description>
    <label>Translation</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Transalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>