force-app/main/default/objects/Translation__c/fields/APTSExtID__c.field-meta.xml
<CustomField>
    <fullName>APTSExtID__c</fullName>
    <externalId>true</externalId>
    <label>APTS Ext ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>