force-app/main/default/objects/Translation__c/fields/Articles_Heading__c.field-meta.xml
<CustomField>
    <fullName>Articles_Heading__c</fullName>
    <label>Articles Heading</label>
    <length>50</length>
    <type>Text</type>
</CustomField>