force-app/main/default/objects/Translation__c/fields/Comments_Heading__c.field-meta.xml
<CustomField>
    <fullName>Comments_Heading__c</fullName>
    <label>Comments Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>