force-app/main/default/objects/Translation__c/fields/Course_Description_Heading__c.field-meta.xml
<CustomField>
    <fullName>Course_Description_Heading__c</fullName>
    <label>Course Description Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>