force-app/main/default/objects/Translation__c/fields/DescriptionTranslation__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTranslation__c</fullName>
    <description>All the product description will be stored in this field</description>
    <label>Description Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>