force-app/main/default/objects/Translation__c/fields/General_heading__c.field-meta.xml
<CustomField>
    <fullName>General_heading__c</fullName>
    <label>General heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>