force-app/main/default/objects/Translation__c/fields/GeneralInfoTranslation__c.field-meta.xml
<CustomField>
    <fullName>GeneralInfoTranslation__c</fullName>
    <description>All the general info translations will be stored in this field</description>
    <label>GeneralInfo Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>