force-app/main/default/objects/Translation__c/fields/Grand_Total_Heading__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Heading__c</fullName>
    <label>Grand Total Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>