force-app/main/default/objects/Translation__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>populate values on the Adjustment Line Items based on the Incentive chosen - analogical to Proposal Line Item (populate fields with the same API names)</description>
    <label>Incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>