force-app/main/default/objects/Translation__c/fields/Initial_Price_Heading__c.field-meta.xml
<CustomField>
    <fullName>Initial_Price_Heading__c</fullName>
    <label>Initial Price Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>