force-app/main/default/objects/Translation__c/fields/LessonsDescriptionsTranslation__c.field-meta.xml
<CustomField>
    <fullName>LessonsDescriptionsTranslation__c</fullName>
    <description>this field will store all the lessons descriptions translation</description>
    <label>Lessons Descriptions Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>