force-app/main/default/objects/Translation__c/fields/Price_Heading__c.field-meta.xml
<CustomField>
    <fullName>Price_Heading__c</fullName>
    <label>Price Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>