force-app/main/default/objects/Translation__c/fields/ProductNameTranslation__c.field-meta.xml
<CustomField>
    <fullName>ProductNameTranslation__c</fullName>
    <description>All the product name Translation will be stored in this field</description>
    <label>Product Name Translation</label>
    <type>TextArea</type>
</CustomField>