force-app/main/default/objects/Translation__c/fields/PromotionNameTranslation__c.field-meta.xml
<CustomField>
    <fullName>PromotionNameTranslation__c</fullName>
    <description>Used for Incentive name Translation</description>
    <label>Promotion Name Translation</label>
    <type>TextArea</type>
</CustomField>