force-app/main/default/objects/Translation__c/fields/Total_Heading__c.field-meta.xml
<CustomField>
    <fullName>Total_Heading__c</fullName>
    <label>Total Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>