force-app/main/default/objects/Translation__c/fields/Unique_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>used for validation of product records</description>
    <label>Unique Record Identifier</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>