force-app/main/default/objects/Translation__c/fields/Valid_Until_Heading__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until_Heading__c</fullName>
    <label>Valid Until Heading</label>
    <length>50</length>
    <type>Text</type>
</CustomField>