force-app/main/default/objects/Translation__c/recordTypes/Product_Translation.recordType-meta.xml
<RecordType>
    <fullName>Product_Translation</fullName>
    <active>true</active>
    <description>All the product fields which have translations will be part of this layout</description>
    <label>Product Translation</label>
</RecordType>