force-app/main/default/objects/Translation__c/recordTypes/StaticTextTranslation.recordType-meta.xml
<RecordType>
    <fullName>StaticTextTranslation</fullName>
    <active>true</active>
    <description>Any static Texts fields in Pricing will be part of this layout(Please do not change the label it is used in custom labels)</description>
    <label>Static Text Translation</label>
</RecordType>